2007-11-20  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the test of Boost.Graph.
	* build-aux/boost.m4 (BOOST_GRAPH): Fix the C++ code used to test
	the library.

2007-11-20  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do not pollute the user-reserved variables.
	* build-aux/boost.m4 (BOOST_FIND_LIB): Fix a bug: when a library was
	found, the LDFLAGS and LIBS weren't properly reset and the macro was
	thus polluting user-reserved variables.  This needs to be tested in
	the testsuite.
	Also do not pass -R to the compiler during the tests, this flag is
	only usable safely with libtool.

2007-11-17  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix a typo in BOOST_THREADS.
	* build-aux/boost.m4 (BOOST_THREADS): Properly set
	`boost_threads_save_CPPFLAGS' to `CPPFLAGS' instead of `LIBS'!
	Bug reported by David Herring.

2007-11-13  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Preserve the original values of --host / --build.
	This fixes `make check' in cross-compilation environments.
	* tests/atlocal.in ($build, $host): Replace with ...
	($build_alias, $host_alias): ... these.  New.
	* tests/testsuite.at (AT_CHECK_AUTOCONF): Use them here.

2007-11-12  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add keywords to the testsuite.
	* tests/testsuite.at (AT_CHECK_MACRO, AT_CHECK_MACRO_CROSS): Add an
	argument in 2nd position (minor backward incompatible change) to
	specify keywords for the tests.
	Use keywords for all tests (core/lib/header with or without cross).

2007-11-12  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add tests for Boost.Program_options.
	* README: Mention the new library.
	* build-aux/boost.m4 (BOOST_PROGRAM_OPTIONS): New macro.
	* tests/testsuite.at: Add a test for the new macro.

2007-11-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use Libtool and -R to encode run paths.
	* README: Mention the dependencies more clearly near the beginning.
	Add a step to use Libtool if it's not already used.
	* build-aux/boost.m4 (BOOST_FIND_LIB): Add -R flags in the LDFLAGS